debugging travis, small fix to Count class fluid example usage

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "excess",
-  "version": "0.0.4",
-  "description": "Excess brings big data to the client side",
+  "version": "0.0.5",
+  "description": "Excess brings big data to the client side. It's push all the way down! Excess is a dataflow programming inspired client/server tool with a twist: it implements a unique game changing push solution, all the way from the database down to the client and back to the database. As a result, changes to the data are pushed to the clients in realtime, according to filters and authorizations, enabling fully reactive fast UIs.",
   "main": "lib/xs.js",
   "files": [ 
     "lib",
@@ -23,7 +23,8 @@
     "chai":  "latest"
   },
   "scripts": {
-    "test": "ln -s ../. node_modules/excess ; echo \"run tests...\" ; node test/server.js && mocha -R spec --compilers coffee:coffee-script test/xs_tests.coffee"
+    "postinstall": "ln -s ../. node_modules/excess || true",
+    "test": "node test/server.js && mocha -R spec --compilers coffee:coffee-script test/xs_tests.coffee"
   },
   "repository": {
     "type": "git",
@@ -36,7 +37,10 @@
     "database",
     "flow control",
     "real time",
-    "realtime"
+    "realtime",
+    "reactive",
+    "socketIo",
+    "push"
   ],
   "author": "ConnectedSets",
   "license": "AGPLv3"
