--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "excess",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Excess brings big data to the client side. It's push all the way down! Excess is a dataflow programming inspired client/server tool with a twist: it implements a unique game changing push solution, all the way from the database down to the client and back to the database. As a result, changes to the data are pushed to the clients in realtime, according to filters and authorizations, enabling fully reactive fast UIs.",
   "main": "lib/xs.js",
   "files": [ 
@@ -40,6 +40,7 @@
     "realtime",
     "reactive",
     "socketIo",
+    "big data",
     "push"
   ],
   "author": "ConnectedSets",
