added connect to the dependencies in package.json, that l8 depends on it was not enough in travis

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "node": ">=0.6.0"
   },
   "dependencies": {
-    "l8": "latest"
+    "connect":  ">=2.7.1",
+    "l8":       "latest"
   },
   "devDependencies": {
     "coffee-script": "~1.4.0",
