--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "excess",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "description": "Excess is a high-efficiency, scalable, realtime web application framework aiming at massively reducing servers' environmental footprint and improving mobile clients battery life.",
   "main": "lib/xs.js",
   "files": [
@@ -15,8 +15,9 @@
     "node": ">=0.8.0"
   },
   "dependencies": {
-
-    "socket.io": "latest"
+    "socket.io": ">=0.9.13",
+    "uglify-js": ">=2.2.5",
+    "less": ">=1.3.3"
   },
   "devDependencies": {
     "coffee-script": "~1.4.0",
