--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "excess",
   
-  "version": "0.0.21",
+  "version": "0.0.22",
   
   "description": "Excess is a high-efficiency, scalable, realtime web application framework aiming at massively reducing servers' environmental footprint and improving mobile clients battery life.",
   
@@ -24,7 +24,8 @@
   "dependencies": {
     "socket.io": ">=0.9.13",
     "uglify-js": ">=2.2.5",
-    "less"     : ">=1.3.3"
+    "less"     : ">=1.3.3",
+    "mime'     : ">=1.2.9"
   },
   
   "devDependencies": {
