--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "socket.io": ">=0.9.13",
     "uglify-js": ">=2.2.5",
     "less"     : ">=1.3.3",
-    "mime'     : ">=1.2.9"
+    "mime"     : ">=1.2.9"
   },
   
   "devDependencies": {
