--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "excess",
   
-  "version": "0.0.25",
+  "version": "0.0.26",
   
   "description": "Excess is a high-efficiency, scalable, realtime web application framework aiming at massively reducing servers' environmental footprint and improving mobile clients battery life.",
   
@@ -26,7 +26,8 @@
     "uglify-js": ">=2.2.5",
     "less"     : ">=1.3.3",
     "mime"     : ">=1.2.9",
-    "node-uuid": ">=1.4.0"
+    "node-uuid": ">=1.4.0",
+    "requirejs": ">=2.1.5"
   },
   
   "devDependencies": {
