--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "excess",
   
-  "version": "0.0.26",
+  "version": "0.0.27",
   
   "description": "Excess is a high-efficiency, scalable, realtime web application framework aiming at massively reducing servers' environmental footprint and improving mobile clients battery life.",
   
@@ -27,7 +27,9 @@
     "less"     : ">=1.3.3",
     "mime"     : ">=1.2.9",
     "node-uuid": ">=1.4.0",
-    "requirejs": ">=2.1.5"
+    "requirejs": ">=2.1.5",
+    "everyauth": ">=0.3.1",
+    "aws-sdk"  : ">=0.9.7-pre.8"
   },
   
   "devDependencies": {
