--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "excess",
   
-  "version": "0.0.34",
+  "version": "0.0.35",
   
   "description": "Excess is a high-efficiency, scalable, realtime web application framework aiming at massively reducing servers' environmental footprint and improving mobile clients battery life.",
   
@@ -55,9 +55,10 @@
     "scalable",
     "realtime",
     "web application framework",
-    "dataflow",
     "database",
     "pipe",
+    "dataflow",
+    "data-flow",
     "functional reactive programming"
   ],
   
