--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "excess",
   
-  "version": "0.1.7",
+  "version": "0.1.8",
   
   "description": "Excess is a high-efficiency, scalable, realtime web application framework aiming at massively reducing servers' environmental footprint and improving mobile clients battery life.",
   
@@ -35,10 +35,10 @@
   },
   
   "devDependencies": {
-    "coffee-script": "~1.4.0",
-    "mocha"        : "latest",
-    "expect.js"    : "0.2.0",
-    "zombie"       : "1.3.1"
+    "coffee-script"  : "~1.4.0",
+    "mocha"          : "latest",
+    "expect.js"      : "0.2.0",
+    "mocha-phantomjs": "2.0.1"
   },
   
   "scripts": {
