--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "excess",
   
-  "version": "0.1.9",
+  "version": "0.1.10",
   
   "description": "Excess is a high-efficiency, scalable, realtime web application framework aiming at massively reducing servers' environmental footprint and improving mobile clients battery life.",
   
@@ -31,7 +31,8 @@
     "everyauth" : ">=0.3.1",
     "aws-sdk"   : ">=0.9.7-pre.8",
     "moment"    : ">=2.0.0",
-    "nodemailer": ">=0.4.1"
+    "nodemailer": ">=0.4.1",
+    "easyimage" : ">=1.1.33"
   },
   
   "devDependencies": {
