--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "excess",
   
-  "version": "0.1.37",
+  "version": "0.1.38",
   
   "description": "Excess is a high-efficiency, scalable, realtime web application framework aiming at massively reducing servers' environmental footprint and improving mobile clients battery life.",
   
@@ -43,7 +43,7 @@
   
   "scripts": {
     "postinstall": "ln -s ../. node_modules/excess || true",
-    "test": "mocha -R spec --compilers coffee:coffee-script test/xs_tests.coffee"
+    "test": "sh tests.sh"
   },
   
   "repository": {
