--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
 *~
 node_modules
 test.out
+test/clone_tests.js
+test/clone_tests.map
+test/xs_all_tests.js
+test/xs_all_tests.map
+test/xs_tests_utils.js
+test/xs_tests_utils.map
+test/xs_tests_utils.map
+test/xs_core.js
+test/xs_core.map
+test/xs_sketchfab_tests.js
+test/xs_sketchfab_tests.map
+test/xs_ui_tests.js
+test/xs_ui_tests.map
+test/xs_form_tests.js
+test/xs_form_tests.map
+test/xs_table_tests.js
+test/xs_table_tests.map
+test/xs_url_tests.js
+test/xs_url_tests.map
+test/xs_control_tests.js
+test/xs_control_tests.map
+test/xs_load_images_tests.js
+test/xs_load_images_tests.map
