--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "mocha"                 : "latest",
     "expect.js"             : "0.3.1",
     "zombie"                : "1.3.1",
-    "mocha-unfunk-reporter" : "0.4.0"
+    "mocha-unfunk-reporter" : "0.4.0",
+    "forever"               : "0.10.11"
   },
   
   "scripts": {
     "postinstall": "ln -s ../. node_modules/excess || true",
+    "pretest": "forever start test/http.js",
+    "posttest": "forever stop 0",
     "test": "sh tests.sh"
   },
   
