--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "coffee-script"         : "~1.6.0",
     "mocha"                 : "latest",
     "expect.js"             : "0.3.1",
-    "zombie"                : "1.3.1",
+    "zombie"                : "2.0.0-alpha31",
     "mocha-unfunk-reporter" : "0.4.0",
     "forever"               : "0.10.11"
   },
