Control Checkbox() refactoring: add underscore to the instance variables; remove unnecessary functions; update checkbox() tests to use ZombieJS

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ test/xs_control_tests.js
 test/xs_control_tests.map
 test/xs_load_images_tests.js
 test/xs_load_images_tests.map
+test/xs_controls.js
+test/xs_controls.map
