--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   
   "version": "0.2.0",
   
-  "description": "Excess is a high-efficiency, scalable, realtime web application framework aiming at massively reducing servers' environmental footprint and improving mobile clients battery life.",
+  "description": "High-Efficiency Reactive Web Application Framework",
   
   "main": "lib/pipelet.js",
   
@@ -22,12 +22,11 @@
   },
   
   "dependencies": {
+    "node-uuid" : ">=1.4.0",
     "socket.io" : ">=0.9.13",
     "uglify-js" : ">=2.2.5",
     "mime"      : ">=1.2.11",
-    "node-uuid" : ">=1.4.0",
     "aws-sdk"   : ">=0.9.7-pre.8",
-    "moment"    : ">=2.0.0",
     "nodemailer": ">=0.4.1",
     "easyimage" : ">=0.1.3"
   },
@@ -43,8 +42,8 @@
   
   "scripts": {
     "postinstall": "ln -s ../. node_modules/excess || true",
-    "pretest": "forever start test/http.js",
-    "posttest": "forever stop test/http.js",
+    "pretest": "which forever 2>&1 /dev/null && forever start test/http.js || echo 'forever not found, not starting test/http.js' 1>&2",
+    "posttest": "which forever 2>&1 /dev/null && forever stop test/http.js || true",
     "test": "sh tests.sh"
   },
   
@@ -54,28 +53,18 @@
   },
   
   "keywords": [
-    "realtime",
-    
-    "database",    
+    "database",
     "reactive database",
-    "events database",
     
     "green software",
     
-    "high-efficiency",
-    
-    "scalable",
-    
     "dataflow",
-    "data flow",
-    "data flow programming",
+    "dataflow programming",
     
     "reactive",
     "reactive programming",
     "functional reactive programming",
-    "FRP",
-    
-    "events"
+    "FRP"
   ],
   
   "author": "ConnectedSets",
