- move tests.sh to test/tests.sh - tests.sh: remove possibility to add more tests, this is now controled by test/xs_all_tests.coffee - create test/post_test.sh test/pre_test.sh extracted from package.json - package.json: use test/post_test.sh & test/pre_test.sh

--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
   
   "scripts": {
     "postinstall": "ln -s ../. node_modules/excess || true",
-    "pretest":  "which forever > /dev/null 2>&1 && forever start test/http.js || echo 'forever not found, not starting test/http.js' 1>&2",
-    "posttest": "which forever > /dev/null 2>&1 && forever stop  test/http.js || true",
-    "test": "sh tests.sh"
+    "pretest"    : "sh test/pre_test.sh",
+    "posttest"   : "sh test/post_test.sh",
+    "test"       : "sh test/tests.sh"
   },
   
   "repository": {
