Refactor test directories:   - test/bin: scripts   - test/src: coffee script sources   - test/lib: compiled javascript and map files
  - update all coffee source to reflect new directory structure in requires
  - update test/src/xs_file.coffee tests to include all subdirectories
  - update .gitignore, coffee-watch.sh, package.json

!!! Important note to contributors:
  - after this update 'git status' will show many untracted 'javascript' and 'map' files in the
    'test' directory. You should delete these files using 'rm'. Do not delete all javascript
    files in the test directory as there are still many source javascript files there,
    typically used for manual testing.

--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,4 @@
 *~
 node_modules
 test.out
-test/clone_tests.js
-test/clone_tests.map
-test/xs_all_tests.js
-test/xs_all_tests.map
-test/xs_tests_utils.js
-test/xs_tests_utils.map
-test/xs_tests_utils.map
-test/xs_core.js
-test/xs_core.map
-test/xs_ui.js
-test/xs_ui.map
-test/xs_sketchfab_tests.js
-test/xs_sketchfab_tests.map
-test/xs_ui_tests.js
-test/xs_ui_tests.map
-test/xs_form_tests.js
-test/xs_form_tests.map
-test/xs_table_tests.js
-test/xs_table_tests.map
-test/xs_url.js
-test/xs_url.map
-test/xs_control_tests.js
-test/xs_control_tests.map
-test/xs_load_images_tests.js
-test/xs_load_images_tests.map
-test/xs_controls.js
-test/xs_controls.map
-test/xs_file.js
-test/xs_file.map
-test/xs_transforms.js
-test/xs_transforms.map
-test/xs_json.js
-test/xs_json.map
+test/lib
