--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "excess",
   
-  "version": "0.2.2",
+  "version": "0.2.3",
   
   "description": "High-Efficiency Reactive Web Application Framework",
   
@@ -22,22 +22,22 @@
   },
   
   "dependencies": {
-    "node-uuid" : ">=1.4.0",
-    "socket.io" : ">=0.9.13",
-    "uglify-js" : ">=2.2.5",
-    "mime"      : ">=1.2.11",
-    "aws-sdk"   : ">=0.9.7-pre.8",
-    "nodemailer": ">=0.4.1",
-    "easyimage" : ">=0.1.3"
+    "node-uuid" : "~1.4.1",
+    "socket.io" : "~0.9.16",
+    "uglify-js" : "~2.4.13",
+    "mime"      : "~1.2.11",
+    "aws-sdk"   : "~2.0.0-rc11",
+    "nodemailer": "~0.6.1",
+    "easyimage" : "~0.1.6"
   },
   
   "devDependencies": {
-    "coffee-script"         : "1.7.1",
-    "mocha"                 : "latest",
-    "expect.js"             : "0.3.1",
-    "zombie"                : "2.0.0-alpha31",
-    "mocha-unfunk-reporter" : "0.4.0",
-    "forever"               : "0.10.11"
+    "coffee-script"         : "~1.7.1",
+    "mocha"                 : "~1.18.2",
+    "expect.js"             : "~0.3.1",
+    "zombie"                : "~2.0.0-alpha31",
+    "mocha-unfunk-reporter" : "~0.4.0",
+    "forever"               : "~0.10.11"
   },
   
   "scripts": {
