--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "excess",
   
-  "version": "0.2.3",
+  "version": "0.2.4",
   
   "description": "High-Efficiency Reactive Web Application Framework",
   
@@ -37,7 +37,8 @@
     "expect.js"             : "0.3.1",
     "zombie"                : "2.0.0-alpha31",
     "mocha-unfunk-reporter" : "0.4.0",
-    "forever"               : "0.10.11"
+    "forever"               : "0.10.11",
+    "connect"               : "2.14.4"
   },
   
   "scripts": {
