--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "socket.io" : "0.9.16",
     "uglify-js" : "2.4.13",
     "mime"      : "1.2.11",
-    "aws-sdk"   : "2.0.0-rc11",
+    "aws-sdk"   : "2.0.0-rc12",
     "nodemailer": "0.6.1",
-    "easyimage" : "0.1.6"
+    "easyimage" : "0.1.6",
+    "passport"  : "0.2.0"
   },
   
   "devDependencies": {
@@ -38,7 +39,8 @@
     "zombie"                : "2.0.0-alpha31",
     "mocha-unfunk-reporter" : "0.4.0",
     "forever"               : "0.10.11",
-    "connect"               : "2.14.4"
+    "connect"               : "2.14.4",
+    "passport-twitter"      : "1.0.2"
   },
   
   "scripts": {
