serve():   - only compress based on mime type using npm compressible version 1.0.1   - re-write HEAD support to work with compressed content   - cache gzip and deflate content   - setHeader( 'Vary', 'Accept-Encoding' ) for caches   - get content in a lazy fashion, using get_content() file method if provided   - add text 'Not Modified' to 304 responses

--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   },
   
   "dependencies": {
-    "node-uuid" : "1.4.1",
-    "socket.io" : "0.9.16",
-    "uglify-js" : "2.4.13",
-    "mime"      : "1.2.11",
-    "aws-sdk"   : "2.0.0-rc13",
-    "nodemailer": "0.6.2",
-    "easyimage" : "0.1.6",
-    "passport"  : "0.2.0"
+    "node-uuid"   : "1.4.1",
+    "socket.io"   : "0.9.16",
+    "uglify-js"   : "2.4.13",
+    "mime"        : "1.2.11",
+    "aws-sdk"     : "2.0.0-rc13",
+    "nodemailer"  : "0.6.2",
+    "easyimage"   : "0.1.6",
+    "passport"    : "0.2.0",
+    "compressible": "1.0.1"
   },
   
   "devDependencies": {
