Implementing Sessions between sockect.io server and passport / connect sessions, WIP: - Implement socket.io "authorization" event - Add dependencies 'express-session', 'cookie', and 'uid2' - http tests:   - implement get_session() function to get or create session from socket.io handshake   most inspired by express-session with which compatibility is required if sessions are   Connect / Express sessions   - provide passport.js with session options, including a session store   - provide passport.js with base url   - increment a client view counter for testing whenever a socket.io client is created   - plenty of traces for better understanding - passport tests:   - use session_options from exported function   - use __base url from exported function

--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "nodemailer"  : "0.6.2",
     "easyimage"   : "0.1.6",
     "passport"    : "0.2.0",
-    "compressible": "1.0.1"
+    "compressible": "1.0.1",
+    "express-session": "^1.0.2",
+    "cookie"         : "^0.1.2",
+    "uid2"           : "0.0.3"
   },
   
   "devDependencies": {
