--- a/package.json
+++ b/package.json
@@ -30,10 +30,7 @@
     "nodemailer"  : "0.6.3",
     "easyimage"   : "0.1.6",
     "passport"    : "0.2.0",
-    "compressible": "1.0.1",
-    "express-session": "1.0.2",
-    "cookie"         : "0.1.2",
-    "uid2"           : "0.0.3"
+    "compressible": "1.0.1"
   },
   
   "devDependencies": {
@@ -43,8 +40,14 @@
     "zombie"                : "2.0.0-alpha31",
     "mocha-unfunk-reporter" : "0.4.0",
     "forever"               : "0.11.0",
-    "connect"               : "2.14.4",
-    "passport-twitter"      : "1.0.2"
+    "express"               : "4.0.0",
+    "express-session"       : "1.0.2",
+    "morgan"                : "1.0.0",
+    "cookie-parser"         : "1.0.1",
+    "body-parser"           : "1.0.2",
+    "passport-twitter"      : "1.0.2",
+    "cookie"                : "0.1.2",
+    "uid2"                  : "0.0.3"
   },
   
   "scripts": {
