--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cookie-parser"         : "1.0.1",
     "body-parser"           : "1.0.2",
     "passport-twitter"      : "1.0.2",
+    "passport-facebook"     : "1.0.3",
     "cookie"                : "0.1.2",
     "uid2"                  : "0.0.3"
   },
