New lib/client/client_assets.js provides sets for all client assets: - eases refactoring of client assets dependencies - exported asset sets:   - npm_dependencies   - core   - es5_shim   - utils   - socket_io   - ui   - bootstrap   - toubkal_min: uglyfied toubkal-min.js - modified test/http.js and examples/teaser/server.js to use these assets - updated package.json postinstall script to reference toubkal instead of excess - updated test html files to reference toubkal-min.js - updated documentation

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   
   "scripts": {
-    "postinstall": "ln -s ../. node_modules/excess || true",
+    "postinstall": "ln -s ../. node_modules/toubkal || true",
     "pretest"    : "sh test/bin/pre_test.sh",
     "posttest"   : "sh test/bin/post_test.sh",
     "test"       : "sh test/bin/tests.sh"
