--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   
   "dependencies": {
+    "es5-shim"    : "4.1.1",
     "node-uuid"   : "1.4.1",
     "socket.io"   : "0.9.16",
     "uglify-js"   : "2.4.13",
