Refactoring to reorganize lib directory, fix old manual tests, cleanup, module patterns, ... - version 0.2.11 - toubkal main is not set to lib/core/filter.js - lib subdirectories:   - utils: meant to be exported out of toubkal eventually   - core: pipelets for clients and servers   - client: browser client pipelets   - server: node pipelets   - socket_io: socket.io pipelets   - bootstrap: Twitter Bootstrap pipelets   - react: Facebook React pipelets - update documentation in README.md

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "toubkal",
   
-  "version": "0.2.10",
+  "version": "0.2.11",
   
   "description": "High-Performances Reactive Web Application Framework",
   
-  "main": "lib/pipelet.js",
+  "main": "lib/core/filter.js",
   
   "files": [
     "lib",
