--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "nodemailer"  : "0.6.3",
     "easyimage"   : "0.1.6",
     "passport"    : "0.2.0",
-    "compressible": "1.0.1"
+    "compressible": "1.0.1",
+    "htmlparser2" : "3.8.2"
   },
   
   "devDependencies": {
