--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "easyimage"   : "0.1.6",
     "passport"    : "0.2.0",
     "compressible": "1.0.1",
-    "htmlparser2" : "3.8.2"
+    "htmlparser2" : "3.8.2",
+    "react"       : "0.13.3"
   },
   
   "devDependencies": {
@@ -69,7 +70,8 @@
   
   "keywords": [
     "reactive",
-    "dataflow"
+    "dataflow",
+    "functional reactive programming"
   ],
   
   "author": "Reactive Sets",
