Exclude toubkal_react from client assets to toubkal-min.js, make it available separatly - otherwise this requires to have react on all ui tests although not used - this worked with previous versions of undefine that silently ignored not find react - version 0.2.5 of undefine throws an exception when a required module is not found

--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "easyimage"   : "0.1.6",
     "passport"    : "0.2.0",
     "compressible": "1.0.1",
-    "htmlparser2" : "3.8.2",
-    "react"       : "0.13.3"
+    "htmlparser2" : "3.8.2"
   },
   
   "devDependencies": {
