--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   
   "description": "High-Performances Reactive Web Application Framework",
   
-  "main": "lib/core/filter.js",
+  "main": "lib/server.js",
   
   "files": [
     "lib",
