--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   
   "devDependencies": {
     "coffee-script"         : "1.7.1",
+    "source-map-support"    : "0.3.2",
     "mocha"                 : "1.18.2",
     "expect.js"             : "0.3.1",
     "zombie"                : "2.0.0-alpha31",
