join(): add 61 tests for multiple attributes conditions; update documentation

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   
   "version": "0.2.15",
   
-  "description": "High-Performances Reactive Web Application Framework",
+  "description": "High-Productivity Reactive Web Application Framework",
   
   "main": "lib/server.js",
   
