Upgrade dependencies to latest version, aws-sdk, source-map-support, express-session, cookie

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "socket.io-client" : "0.9.16",
     "uglify-js"        : "2.5.0",
     "mime"             : "1.2.11",
-    "aws-sdk"          : "2.0.0-rc13",
+    "aws-sdk"          : "2.2.11",
     "nodemailer"       : "1.8.0",
     "easyimage"        : "0.1.6",
     "passport"         : "0.2.2",
@@ -38,14 +38,14 @@
   
   "devDependencies": {
     "coffee-script"         : "1.7.1",
-    "source-map-support"    : "0.3.2",
+    "source-map-support"    : "0.3.3",
     "mocha"                 : "1.18.2",
     "expect.js"             : "0.3.1",
     "zombie"                : "2.0.0-alpha31",
     "mocha-unfunk-reporter" : "0.4.0",
     "forever"               : "0.11.1",
     "express"               : "4.13.3",
-    "express-session"       : "1.0.3",
+    "express-session"       : "1.12.0",
     "morgan"                : "1.0.0",
     "cookie-parser"         : "1.0.1",
     "body-parser"           : "1.0.2",
@@ -53,7 +53,7 @@
     "passport-facebook"     : "2.0.0",
     "passport-github"       : "1.0.0",
     "passport-google-oauth" : "0.2.0",
-    "cookie"                : "0.1.2",
+    "cookie"                : "0.2.3",
     "uid2"                  : "0.0.3"
   },
   
