--- a/package.json
+++ b/package.json
@@ -47,13 +47,11 @@
     "express"               : "4.13.3",
     "express-session"       : "1.12.0",
     "morgan"                : "1.0.0",
-    "cookie-parser"         : "1.0.1",
     "body-parser"           : "1.0.2",
     "passport-twitter"      : "1.0.3",
     "passport-facebook"     : "2.0.0",
     "passport-github"       : "1.0.0",
-    "passport-google-oauth" : "0.2.0",
-    "uid2"                  : "0.0.3"
+    "passport-google-oauth" : "0.2.0"
   },
   
   "scripts": {
