--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "toubkal",
   
-  "version": "0.3.0",
+  "version": "0.3.1-wip",
   
   "description": "High-Productivity Reactive Web Application Framework",
   
