--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-session"  : "1.12.1",
     "passport"         : "0.3.2",
     "compressible"     : "2.0.6",
+    "es5-shim"         : "4.3.1",
     "htmlparser2"      : "3.8.3"
   },
   
