--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "passport"         : "0.3.2",
     "compressible"     : "2.0.6",
     "es5-shim"         : "4.3.1",
-    "htmlparser2"      : "3.9.0"
+    "htmlparser2"      : "3.9.0",
+    "url-pattern"      : "0.10.2"
   },
   
   "devDependencies": {
