--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "compressible"     : "2.0.6",
     "es5-shim"         : "4.4.1",
     "htmlparser2"      : "3.9.0",
+    "css-select"       : "1.2.0",
     "url-pattern"      : "1.0.0"
   },
   
