--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "toubkal",
   
-  "version": "0.3.3",
+  "version": "0.3.4-WIP",
   
   "description": "High-Productivity Reactive Web Application Framework",
   
@@ -32,7 +32,7 @@
     "easyimage"        : "2.1.0",
     "express-session"  : "1.13.0",
     "passport"         : "0.3.2",
-    "compressible"     : "2.0.6",
+    "compressible"     : "2.0.7",
     "es5-shim"         : "4.4.1",
     "htmlparser2"      : "3.9.0",
     "css-select"       : "1.2.0",
