--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   
   "version": "0.3.4-WIP",
   
-  "description": "High-Productivity Reactive Web Application Framework",
+  "description": "Rapid development of fully reactive applications and micro-services for Node.js and the Browser",
   
   "main": "lib/server.js",
   
@@ -33,7 +33,7 @@
     "easyimage"                    : "2.1.0",
     "express-session"              : "1.13.0",
     "passport"                     : "0.3.2",
-    "compressible"                 : "2.0.7",
+    "compressible"                 : "2.0.8",
     "es5-shim"                     : "4.5.8",
     "htmlparser2"                  : "3.9.0",
     "css-select"                   : "1.2.0",
