--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-uuid"                    : "1.4.7",
     "socket.io"                    : "1.4.6",
     "socket.io-client"             : "1.4.6",
+    "acorn"                        : "3.1.0",
     "uglify-js"                    : "2.6.2",
     "mime"                         : "1.3.4",
     "nodemailer"                   : "2.4.2",
