--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "socket.io"                    : "1.4.6",
     "socket.io-client"             : "1.4.6",
     "acorn"                        : "3.2.0",
+    "marked"                       : "0.3.5",
+    "highlight.js"                 : "9.4.0",
     "uglify-js"                    : "2.6.3",
     "mime"                         : "1.3.4",
     "nodemailer"                   : "2.4.2",
