--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "es5-shim"                     : "4.5.9",
     "htmlparser2"                  : "3.9.1",
     "css-select"                   : "1.2.0",
-    "url-pattern"                  : "1.0.1"
+    "url-pattern"                  : "1.0.1",
+    "piexifjs"                     : "1.0.0"
   },
   
   "devDependencies": {
