--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "toubkal",
   
-  "version": "0.3.4-WIP",
+  "version": "0.3.4",
   
   "description": "Rapid development of fully reactive applications and micro-services for Node.js and the Browser",
   
