--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "source-map-support"           : "0.4.3",
     "mocha"                        : "2.5.3",
     "expect.js"                    : "0.3.1",
-    "zombie"                       : "2.0.0-alpha31",
+    "zombie"                       : "4.2.1",
     "mocha-unfunk-reporter"        : "0.4.0",
     "forever"                      : "0.15.2",
     "express"                      : "4.14.0",
