--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "remarkable"                   : "1.7.1",
     "highlight.js"                 : "9.7.0",
     "uglify-js"                    : "2.7.3",
+    "source-map"                   : "0.5.6",
     "mime"                         : "1.3.4",
     "nodemailer"                   : "2.6.4",
     "nodemailer-sendmail-transport": "1.0.0",
