--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "compressible"                 : "2.0.9",
     "es5-shim"                     : "4.5.9",
     "htmlparser2"                  : "3.9.2",
-    "css-select"                   : "1.2.0",
+    "css-select"                   : "1.3.0-rc0",
     "url-pattern"                  : "1.0.3",
     "piexifjs"                     : "1.0.0"
   },
