--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "htmlparser2"                  : "3.9.2",
     "css-select"                   : "1.3.0-rc0",
     "url-pattern"                  : "1.0.3",
+    "diff"                         : "3.2.0",
     "piexifjs"                     : "1.0.3"
   },
   
