--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   
   "files": [
     "lib",
-    "test"
+    "documentation",
+    "test",
+    "bin",
+    "examples",
+    "site"
   ],
   
   "directories": {
@@ -22,7 +26,7 @@
   },
   
   "dependencies": {
-    "undefine"                     : "0.2.8",
+    "undefine"                     : "0.2.9",
     "node-uuid"                    : "1.4.8",
     "socket.io"                    : "2.0.3",
     "socket.io-client"             : "2.0.3",
@@ -65,7 +69,6 @@
   },
   
   "scripts": {
-    "postinstall": "ln -s ../. node_modules/toubkal || true",
     "pretest"    : "sh test/bin/pre_test.sh",
     "posttest"   : "sh test/bin/post_test.sh",
     "test"       : "sh test/bin/tests.sh"
