--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   
   "scripts": {
+    "postinstall": "node ./create_node_modules_self_reference.js",
     "pretest"    : "sh test/bin/pre_test.sh",
     "posttest"   : "sh test/bin/post_test.sh",
     "test"       : "sh test/bin/tests.sh"
