--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
   },
   
   "scripts": {
-    "postinstall": "node ./create_node_modules_self_reference.js",
+    "preinstall" : "node ./node_modules_self_reference.js remove",
+    "postinstall": "node ./node_modules_self_reference.js add",
     "pretest"    : "sh test/bin/pre_test.sh",
     "posttest"   : "sh test/bin/post_test.sh",
     "test"       : "sh test/bin/tests.sh"
