--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "toubkal",
-  
   "version": "0.3.12",
-  
   "description": "Fully reactive programming for nodejs and the browser",
-  
   "main": "lib/server.js",
-  
   "files": [
     "lib",
     "documentation",
@@ -15,85 +11,75 @@
     "examples",
     "site"
   ],
-  
   "directories": {
-    "lib":  "lib",
+    "lib": "lib",
     "test": "test"
   },
-  
   "engines": {
     "node": ">=4.6.0"
   },
-  
   "dependencies": {
-    "undefine"                     : "0.2.9",
-    "node-uuid"                    : "1.4.8",
-    "socket.io"                    : "2.0.3",
-    "socket.io-client"             : "2.0.3",
-    "acorn"                        : "5.0.3",
-    "remarkable"                   : "1.7.1",
-    "highlight.js"                 : "9.12.0",
-    "uglify-js"                    : "3.0.17",
-    "source-map"                   : "0.5.6",
-    "mime"                         : "1.4.1",
-    "nodemailer2"                  : "2.7.1",
+    "acorn": "5.0.3",
+    "compressible": "2.0.10",
+    "css-select": "1.3.0-rc0",
+    "diff": "3.2.0",
+    "domutils": "1.6.2",
+    "easyimage": "2.1.0",
+    "es5-shim": "4.5.9",
+    "express-session": "1.15.3",
+    "highlight.js": "9.12.0",
+    "htmlparser2": "3.9.2",
+    "mime": "1.4.1",
+    "node-uuid": "1.4.8",
     "nodemailer-sendmail-transport": "1.0.2",
-    "easyimage"                    : "2.1.0",
-    "express-session"              : "1.15.3",
-    "passport"                     : "0.3.2",
-    "compressible"                 : "2.0.10",
-    "es5-shim"                     : "4.5.9",
-    "domutils"                     : "1.6.2",
-    "htmlparser2"                  : "3.9.2",
-    "css-select"                   : "1.3.0-rc0",
-    "url-pattern"                  : "1.0.3",
-    "diff"                         : "3.2.0",
-    "piexifjs"                     : "1.0.3"
+    "nodemailer2": "2.7.1",
+    "passport": "0.3.2",
+    "piexifjs": "1.0.3",
+    "remarkable": "1.7.1",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
+    "source-map": "0.5.6",
+    "uglify-js": "3.0.17",
+    "undefine": "0.2.9",
+    "url-pattern": "1.0.3"
   },
-  
   "devDependencies": {
-    "coffee-script"                : "1.12.6",
-    "source-map-support"           : "0.4.15",
-    "mocha"                        : "3.4.2",
-    "expect.js"                    : "0.3.1",
-    "zombie"                       : "5.0.5",
-    "mocha-unfunk-reporter"        : "0.4.0",
-    "forever"                      : "0.15.3",
-    "express"                      : "4.15.3",
-    "passport-twitter"             : "1.0.4",
-    "passport-facebook"            : "2.1.1",
-    "passport-github"              : "1.1.0",
-    "passport-linkedin"            : "1.0.0",
-    "passport-linkedin-oauth2"     : "1.5.0",
-    "passport-google-oauth20"      : "1.0.0"
+    "coffee-script": "1.12.6",
+    "source-map-support": "0.4.15",
+    "mocha": "3.4.2",
+    "expect.js": "0.3.1",
+    "zombie": "5.0.5",
+    "mocha-unfunk-reporter": "0.4.0",
+    "forever": "0.15.3",
+    "express": "4.15.3",
+    "passport-twitter": "1.0.4",
+    "passport-facebook": "2.1.1",
+    "passport-github": "1.1.0",
+    "passport-linkedin": "1.0.0",
+    "passport-linkedin-oauth2": "1.5.0",
+    "passport-google-oauth20": "1.0.0"
   },
-  
   "scripts": {
-    "preinstall" : "node ./node_modules_self_reference.js remove",
+    "preinstall": "node ./node_modules_self_reference.js remove",
     "postinstall": "node ./node_modules_self_reference.js add",
-    "pretest"    : "sh test/bin/pre_test.sh",
-    "posttest"   : "sh test/bin/post_test.sh",
-    "test"       : "sh test/bin/tests.sh"
+    "pretest": "sh test/bin/pre_test.sh",
+    "posttest": "sh test/bin/post_test.sh",
+    "test": "sh test/bin/tests.sh"
   },
-  
   "testling": {
     "harness": "mocha-tdd",
     "files": "test/lib/*js"
   },
-  
   "repository": {
     "type": "git",
-    "url":  "git://github.com/ReactiveSets/toubkal.git"
+    "url": "git://github.com/ReactiveSets/toubkal.git"
   },
-  
   "keywords": [
     "reactive programming",
     "transactional",
     "reactive",
     "dataflow"
   ],
-  
   "author": "Reactive Sets",
-  
   "license": "AGPL-3.0"
 }
