--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "passport": "0.3.2",
     "piexifjs": "1.0.3",
     "remarkable": "1.7.1",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
+    "socket.io": "2.1.1",
+    "socket.io-client": "2.1.1",
     "source-map": "0.5.6",
     "uglify-js": "3.0.17",
     "undefine": "0.2.10",
@@ -45,19 +45,19 @@
   },
   "devDependencies": {
     "coffee-script": "1.12.6",
-    "source-map-support": "0.4.15",
-    "mocha": "3.4.2",
     "expect.js": "0.3.1",
-    "zombie": "5.0.5",
-    "mocha-unfunk-reporter": "0.4.0",
-    "forever": "0.15.3",
     "express": "4.16.4",
-    "passport-twitter": "1.0.4",
+    "forever": "0.15.3",
+    "mocha": "5.2.0",
+    "mocha-unfunk-reporter": "0.4.0",
     "passport-facebook": "2.1.1",
     "passport-github": "1.1.0",
+    "passport-google-oauth20": "1.0.0",
     "passport-linkedin": "1.0.0",
     "passport-linkedin-oauth2": "1.5.0",
-    "passport-google-oauth20": "1.0.0"
+    "passport-twitter": "1.0.4",
+    "source-map-support": "0.4.15",
+    "zombie": "5.0.5"
   },
   "scripts": {
     "preinstall": "node ./node_modules_self_reference.js remove",
