--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "socket.io-client": "2.1.1",
     "source-map": "0.5.6",
     "uglify-js": "3.0.17",
-    "undefine": "0.2.10",
+    "undefine": "latest",
     "url-pattern": "1.0.3"
   },
   "devDependencies": {
