Adding application_template to files section of package.json, to export with next npm published release

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "documentation",
     "bin",
     "examples",
-    "site"
+    "site",
+    "application_template"
   ],
   "directories": {
     "lib": "lib",
