--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "express-session": "1.15.6",
     "highlight.js": "9.12.0",
     "htmlparser2": "3.9.2",
+    "markdown-it": "9.0.1",
     "mime": "1.4.1",
+    "mocha": "^7.1.1",
     "node-uuid": "1.4.8",
     "nodemailer-sendmail-transport": "1.0.2",
     "nodemailer2": "2.7.1",
     "passport": "0.3.2",
     "piexifjs": "1.0.3",
-    "markdown-it": "9.0.1",
     "socket.io": "2.1.1",
     "socket.io-client": "2.1.1",
     "source-map": "0.5.6",
@@ -48,7 +49,6 @@
     "coffee-script": "1.12.6",
     "expect.js": "0.3.1",
     "express": "4.16.4",
-    "mocha": "5.2.0",
     "mocha-unfunk-reporter": "0.4.0",
     "passport-facebook": "2.1.1",
     "passport-github": "1.1.0",
