--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "css-select": "1.3.0-rc0",
     "diff": "3.5.0",
     "domutils": "1.6.2",
-    "easyimage": "2.1.0",
+    "easyimage": "^3.1.1",
     "es5-shim": "4.5.9",
     "express-session": "1.15.6",
     "highlight.js": "9.12.0",
