--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "node": ">=4.6.0"
   },
   "dependencies": {
-    "acorn": "5.0.3",
+    "acorn": "^7.1.1",
     "compressible": "2.0.10",
     "css-select": "1.3.0-rc0",
     "diff": "3.5.0",
