--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "mocha-unfunk-reporter": "0.4.0",
     "passport-facebook": "2.1.1",
     "passport-github": "1.1.0",
-    "passport-google-oauth20": "1.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-linkedin": "1.0.0",
     "passport-linkedin-oauth2": "1.5.0",
     "passport-twitter": "1.0.4",
