--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "node": ">=4.6.0"
   },
   "dependencies": {
-    "acorn": "^7.2.0",
+    "acorn": "^7.4.1",
     "compressible": "2.0.10",
     "css-select": "1.3.0-rc0",
     "diff": "3.5.0",
@@ -33,10 +33,10 @@
     "htmlparser2": "3.9.2",
     "markdown-it": "9.0.1",
     "mime": "1.4.1",
-    "mocha": "^7.1.2",
+    "mocha": "^7.2.0",
     "node-uuid": "1.4.8",
+    "nodemailer": "^6.8.0",
     "nodemailer-sendmail-transport": "1.0.2",
-    "nodemailer2": "2.7.1",
     "passport": "0.3.2",
     "piexifjs": "1.0.3",
     "socket.io": "2.1.1",
