--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-linkedin": "1.0.0",
     "passport-linkedin-oauth2": "1.5.0",
+    "passport-local": "^1.0.0",
     "passport-twitter": "1.0.4",
     "source-map-support": "0.4.15",
     "zombie": "6.1.4"
